tests/transpiler/x/fs/query_sum_select.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/transpiler/x/fs/query_sum_select.fs(4,61): error FS0001: The type 'int' is not compatible with the type 'seq<'a>'
